# Plume

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  NEXT_SESSION.md  PLAN.md  README.md  SPEC.md  WIRE_ROUTING_PLAN.md  WIRING.md
samples/: anchors.plume  anchors_out.plume  bare_attrs.plume  defaults.plume  dim_line.plume  full_example.plume  hello.plume  internal_wires.plume  markers_all.plume  mermaid_fast.plume  modifiers.plume  multi_value_box.plume  primitives_all.plume  rotation.plume  scene_grid.plume  shapes.plume  styles.plume  table.plume  templates_all.plume  type_defaults.plume  values.plume  wires_anchors.plume  wires_basic.plume  wires_bus.plume  wires_chain.plume  wires_dense.plume  wires_fan.plume  wires_grid.plume  wires_labels.plume  wires_nested.plume  wires_realistic.plume  wires_realistic_column.plume  wires_selfloop.plume  wires_star.plume
src/: ast.rs  error.rs  fmt.rs  layout.rs  lexer.rs  lib.rs  lint.rs  main.rs  parser.rs  render.rs  resolve.rs  span.rs  theme.rs
src/layout/: flex.rs  grid.rs  ir.rs  mod.rs  primitives.rs  text.rs  values.rs  wires.rs
src/render/: markers.rs  mod.rs  primitives.rs  style_block.rs  values.rs  wires.rs
src/resolve/: ir.rs  mod.rs  shapes.rs  styles.rs  vars.rs
src/serve/: mod.rs  playground.html
tests/: cli.rs  conformance.rs  fmt.rs  hello.rs  parsing.rs  rendering.rs  resolution.rs  wire_quality.rs  wire_rules.rs  wiring.rs
tests/snapshots/: conformance__snapshot_baked_svg_for_every_sample@anchors.plume.snap  conformance__snapshot_baked_svg_for_every_sample@anchors_out.plume.snap  (+37 more)
(+26 files in other folders)
